--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.9.0"
   },
   "devDependencies": {
