--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.20.0",
     "@mdi/font": "^7.4.47",
     "axios": "^1.10.0",
     "vue": "^3.5.17",
